prime added audio,video and image filter

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -139,7 +140,6 @@
             <div class="menu-toggle"><i class="fas fa-bars"></i></div>
         </div>
     </nav>
-
     {% block content %}
 
 
