--- a/core/templates/video_upload.html
+++ b/core/templates/video_upload.html
@@ -112,7 +112,7 @@
             <div class="form-group">
                 <label for="mediaFile">Media files</label>
                 <!-- {{files.file|attr:"accept:image/*,video/*,audio/*" }} -->
-                {{files.file|attr:"accept:image/*" }}
+                {{files.file|attr:"accept:video/*" }}
 
             </div>
 
