--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 
 {% block title %} Home {% endblock %}
@@ -6,9 +5,14 @@
 {% block content %}
 
 <style>
-    a{
+    a {
         text-decoration: none;
         color: black;
+    }
+    .media-icon {
+        width: 48px;
+        height: 48px;
+        margin-bottom: 15px;
     }
 </style>
 
@@ -17,7 +21,11 @@
 
             <a href="{% url 'core:image_upload' %}">
                 <div class="media-box">
-                    <i class="fas fa-image media-icon" style="color: #e74c3c;"></i>
+                    <svg class="media-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#e74c3c">
+                        <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14z"/>
+                        <path d="M8.5 13.5l2.5 3 3.5-4.5 4.5 6H5z"/>
+                        <circle cx="6.5" cy="8.5" r="1.5"/>
+                    </svg>
                     <h3>Images</h3>
                     <p>Share your favorite moments in high quality images</p>
                 </div>
@@ -25,7 +33,9 @@
 
             <a href="{% url 'core:video_upload' %}">
                 <div class="media-box">
-                    <i class="fas fa-video media-icon" style="color: #3498db;"></i>
+                    <svg class="media-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#3498db">
+                        <path d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z"/>
+                    </svg>
                     <h3>Videos</h3>
                     <p>Upload and stream videos in various formats</p>
                 </div>
@@ -33,7 +43,9 @@
 
             <a href="{% url 'core:audio_upload' %}">
                 <div class="media-box">
-                    <i class="fas fa-music media-icon" style="color: #2ecc71;"></i>
+                    <svg class="media-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#2ecc71">
+                        <path d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"/>
+                    </svg>
                     <h3>Audio</h3>
                     <p>Share your music and audio recordings</p>
                 </div>
